# Eletjatek

./: .gitignore  CMakeLists.txt  README.md  display.c  display.h  file_handling.c  file_handling.h  filehandling.c  filehandling.h  game_display.c  game_display.h  game_event_handler.c  game_event_handler.h  game_logic.c  game_logic.h  gamelogic.c  gamelogic.h  grid_display.c  grid_display.h  jateklogika.c  jateklogika.h  main.c  megjelenites.c  megjelenites.h  menu.c  menu.h  menu_button.c  menu_button.h  menu_element.c  menu_element.h  menu_text.c  menu_text.h  notes.txt  sdl_utils.c  sdl_utils.h  typedefs.h  utils.c  utils.h
